# ai_coding_develop_flow

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.omc/state/: hud-state.json  hud-stdin-cache.json
app/: main.py
app/api/: feishu_events.py  webhooks.py
app/models/: schemas.py
app/prompts/: code_gen.py  code_review.py  requirement.py
app/services/: ai_service.py  feishu_approval.py  feishu_bitable.py  feishu_bot.py  feishu_doc.py  feishu_notify.py  github_service.py  pipeline.py
app/tasks/: celery_app.py  coding_tasks.py  deploy_tasks.py  review_tasks.py
config/: litellm_config.py  settings.py
scripts/: init_bitable.py
